# knwl-api

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
knwl_api/: __init__.py  main.py  mcp_server.py
knwl_api/models/: JobStatus.py  KnwlFact.py
knwl_api/routes/: __init__.py
knwl_api/routes/kg/: __init__.py  controller.py  service.py
tests/: fixtures.py  test_basic.py  test_mcp.py
